@@ -4,6 +4,8 @@ phpmd-0.2.3 (2010/     )
 - Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
   as unused when used inside double quoted string. Fixed in svn
   revision #187.
+- Implemented #9: Add support for "Suppress warnings" annotations.
+  Implemented in svn revision #200.
 - Implemented #10: Support for exclude element in rule-set files added.
   Implemented in svn revision #189.
 
